# rmm

./: .gitignore  BUILD.bazel  Makefile  README.md  WORKSPACE.bazel  bazel-bin  bazel-out  bazel-rmm  bazel-testlogs  deploy-client.sh  deploy-frontend.sh  deps.bzl  package-lock.json  package.json  rmm.code-workspace
backend/: .dockerignore  .env  Dockerfile  Makefile  docker-compose.yml  go.mod  go.sum  main.go
backend/config/: database.go  jwt.go
backend/controller/: device-tokens.controller.go  device.controller.go  jwt.controller.go  systemInfo.controller.go  user.controller.go
backend/handlers/: auth.go  device.go  systemInfo.go
backend/models/: device-token.go  device.go  socket-event.go  systeminfo.go  user.go
backend/socket/: devices.go  handlers.go  socket.go
client/: Makefile  deploy.sh  go.mod  main.go
client/config/: config.go
client/http/: get.go  patch.go  post.go  socket.go
client/models/: configuration.go  device.go  socket-event.go  systeminfo.go  usage.go
client/system/: functions.go  platform.go  stysteminfo.go  usage.go
client/vars/: global.go
frontend/: .prettierrc  index.html  package.json
frontend/src/: App.svelte  app.postcss  http.ts  stores.ts  types.ts  vars.ts  ws.ts
frontend/src/lib/: Confirm.svelte  ConnectionIndecator.svelte  DeviceInfo.svelte  DevicePage.svelte  DeviceProcesses.svelte  DeviceRun.svelte  DeviceServices.svelte  DeviceUsage.svelte  Devices.svelte  Header.svelte  Login.svelte  Redirects.svelte
frontend/src/lib/components/: DeviceHeader.svelte  DeviceUsage.svelte  Devices.svelte  Header.svelte
frontend/src/lib/helper/: functions.ts
libs/eslint-config-custom/: index.js  package.json
libs/go/helpers/: BUILD.bazel  env.go  helper.go
libs/go/models/: BUILD.bazel  configuration.go  device-permissions.model.go  device.go  refresh-token.model.go  systeminfo.go  usage.go  user.go
libs/svelte-lib/: index.ts  package.json
libs/svelte-lib/components/confirm/: Confirm.svelte  confirm.ts
projects/: Makefile  deploy-client.sh
projects/backend/: .env  BUILD.bazel  go.mod  go.sum  main.go
projects/backend/config/: BUILD.bazel  database.config.go  jwt.config.go  pushover.config.go
projects/backend/controller/: BUILD.bazel  device-tokens.controller.go  device.controller.go  jwt.controller.go  notification.controller.go  permission.controller.go  pushover.controller.go  systemInfo.controller.go  user.controller.go
projects/backend/handlers/: BUILD.bazel  auth.go  auth.handler.go  device.go  device.handler.go  notfication.handler.go  permissions.handler.go  user.handler.go
projects/backend/middlewares/: BUILD.bazel  auth.middleware.go
projects/backend/socket/: BUILD.bazel  devices.go  devices.socket.go  handlers.socket.go  socket.go
projects/client/: BUILD.bazel  go.mod  go.sum  main.go
projects/client/config/: BUILD.bazel  config.go
projects/client/http/: BUILD.bazel  socket.go
projects/client/socket/: BUILD.bazel  main.socket.go  usage.go
projects/client/system/: BUILD.bazel  functions.go  stysteminfo.go  usage.go
projects/client/vars/: BUILD.bazel  global.go
projects/frontend/: deploy.sh  package.json  tailwind.config.cjs  vite.config.ts
projects/frontend/src/: App.svelte  stores.ts  types.ts  vars.dev.ts  vars.ts
projects/frontend/src/lib/components/: ConnectionIndecator.svelte  DeviceHeader.svelte  DeviceInfo.svelte  DevicePage.svelte  DevicePermissions.svelte  DeviceProcesses.svelte  DeviceRun.svelte  DeviceServices.svelte  DeviceUsage.svelte  Devices.svelte  Header.svelte  Login.svelte  Notifications.svelte  Profile.svelte  Redirects.svelte  SettingsPage.svelte  TokenOverview.svelte
projects/frontend/src/lib/helper/: http.ts  ws.ts
projects/rmm/: Makefile  rmm.code-workspace
projects/rmm/frontend/: package.json  tailwind.config.cjs
projects/rmm/frontend/src/: App.svelte  app.postcss  stores.ts  types.ts  vars.ts
projects/rmm/frontend/src/lib/components/: Confirm.svelte  DeviceInfo.svelte  DevicePage.svelte  DeviceProcesses.svelte  DeviceServices.svelte  DeviceUsage.svelte  TokenOverview.svelte
projects/rmm/frontend/src/lib/helper/: http.ts  ws.ts
projects/rmm/go/backend/: BUILD.bazel  go.sum  init.sql  main.go
projects/rmm/go/backend/config/: BUILD.bazel  database.go  env.go  jwt.go
projects/rmm/go/backend/controller/: BUILD.bazel  device-tokens.controller.go  device.controller.go  jwt.controller.go  systemInfo.controller.go  user.controller.go
projects/rmm/go/backend/handlers/: BUILD.bazel  auth.go  device.go
projects/rmm/go/backend/helpers/: BUILD.bazel
projects/rmm/go/backend/socket/: BUILD.bazel  devices.go  handlers.go  socket.go
projects/rmm/go/client/: BUILD.bazel  deploy.sh  main.go
projects/rmm/go/client/config/: BUILD.bazel  config.go
projects/rmm/go/client/http/: BUILD.bazel  socket.go
projects/rmm/go/client/system/: BUILD.bazel  functions.go  usage.go
projects/rmm/go/client/vars/: BUILD.bazel  global.go
projects/rmm/go/lib/models/: BUILD.bazel  device-token.go  user.go
