load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "client_lib",
    srcs = ["main.go"],
    importpath = "github.com/fes111/rmm/projects/client",
    visibility = ["//visibility:private"],
    deps = [
        "//libs/go/helpers",
        "//libs/go/models",
        "//projects/client/config",
        "//projects/client/http",
        "//projects/client/system",
        "//projects/client/vars",
        "@com_github_recws_org_recws//:recws",
    ],
)

go_binary(
    name = "RMM_CLIENT",
    embed = [":client_lib"],
    visibility = ["//visibility:public"],
)

go_binary(
    name = "RMM_CLIENT_ARM",
    embed = [":client_lib"],
    goarch = "arm64",
    goos = "linux",
    visibility = ["//visibility:public"],
)

go_binary(
    name = "RMM_CLIENT_LINUX",
    embed = [":client_lib"],
    goarch = "amd64",
    goos = "linux",
    visibility = ["//visibility:public"],
)
