load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "controller",
    srcs = [
        "device.controller.go",
        "device-tokens.controller.go",
        "jwt.controller.go",
        "notification.controller.go",
        "permission.controller.go",
        "pushover.controller.go",
        "systemInfo.controller.go",
        "user.controller.go",
    ],
    importpath = "github.com/fes111/rmm/projects/backend/controller",
    visibility = ["//visibility:public"],
    deps = [
        "//libs/go/models",
        "//projects/backend/config",
        "@com_github_golang_jwt_jwt//:jwt",
        "@com_github_gregdel_pushover//:pushover",
        "@io_gorm_gorm//:gorm",
        "@io_gorm_gorm//clause",
    ],
)
