load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "middlewares",
    srcs = ["auth.middleware.go"],
    importpath = "github.com/fes111/rmm/projects/backend/middlewares",
    visibility = ["//visibility:public"],
    deps = [
        "//projects/backend/controller",
        "@com_github_gofiber_fiber_v2//:fiber",
    ],
)
