load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "config",
    srcs = ["config.go"],
    importpath = "github.com/fes111/rmm/projects/client/config",
    visibility = ["//visibility:public"],
    deps = [
			"@com_github_google_uuid//:uuid",
			"//libs/go/models:models",
			"//projects/client/vars:vars",
			"//projects/client/system:system",
		],
)
