load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "system",
    srcs = [
        "functions.go",
        "platform.go",
        "stysteminfo.go",
        "usage.go",
    ],
		deps = [
			"//projects/client/vars:vars",
			"//projects/client/http:http",
			"//libs/go/models:models",
		],
    importpath = "github.com/fes111/rmm/projects/client/system",
    visibility = ["//visibility:public"],
)
