load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "system",
    srcs = [
        "functions.go",
        "platform.go",
        "stysteminfo.go",
    ],
    importpath = "github.com/fes111/rmm/projects/client/system",
    visibility = ["//visibility:public"],
    deps = ["//projects/client/vars"],
)
