load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")") 

go_library(
    name = "backend_lib",
    visibility = ["//visibility:public"],
    srcs = ["main.go"],
    deps = [
        "@com_github_gofiber_fiber_v2//:fiber",
        "@com_github_gofiber_fiber_v2//middleware/cors",
        "@com_github_gofiber_jwt_v3//:jwt",
				"//projects/rmm/go/backend/config:config",
				"//projects/rmm/go/backend/socket:socket",
				"//projects/rmm/go/backend/handlers:handlers",
    ],
)

go_binary(
	name = "RMM_API",
	embed = [":backend_lib"],
	visibility = ["//visibility:public"],
)

go_binary(
	name = "RMM_API_LINUX",
	embed = [":backend_lib"],
	visibility = ["//visibility:public"],
	goos = "linux",
	goarch = "amd64",
)
