load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "RMM_CLIENT",
    srcs = ["main.go"],
    importpath = "github.com/fes111/rmm/projects/rmm/go/client",
    visibility = ["//visibility:private"],
    deps = [
			"@com_github_gorilla_websocket//:websocket",
			"//projects/rmm/go/lib/models:models",
			"//projects/rmm/go/client/vars:vars",
			"//projects/rmm/go/client/system:system",
			"//projects/rmm/go/client/http:http",
			"//projects/rmm/go/client/config:config",
			],
)
