load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "config",
    srcs = [
        "database.go",
        "env.go",
        "jwt.go",
    ],
    importpath = "github.com/fes111/rmm/projects/rmm/go/backend/config",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_gofiber_jwt_v3//:jwt",
        "@io_gorm_driver_mysql//:mysql",
        "@io_gorm_gorm//:gorm",
				"//projects/rmm/go/lib/models:models",
    ],
)
