load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "handlers",
    srcs = [
        "auth.go",
        "device.go",
    ],
    importpath = "github.com/fes111/rmm/projects/rmm/go/backend/handlers",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_gofiber_fiber_v2//:fiber",
        "@com_github_golang_jwt_jwt_v4//:jwt",
        "@io_gorm_gorm//:gorm",
        "@io_gorm_gorm//clause",
        "@org_golang_x_crypto//bcrypt",
				"//projects/rmm/go/lib/models:models",
				"//projects/rmm/go/backend/config:config",
				"//projects/rmm/go/backend/controller:controller",
    ],
)
