load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "socket",
    srcs = [
        "devices.go",
        "handlers.go",
        "socket.go",
    ],
    importpath = "github.com/fes111/rmm/projects/rmm/go/backend/socket",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_gofiber_fiber_v2//:fiber",
        "@com_github_gofiber_websocket_v2//:websocket",
        "@com_github_golang_jwt_jwt_v4//:jwt",
        "@io_gorm_gorm//:gorm",
        "@io_gorm_gorm//clause",
				"//projects/rmm/go/lib/models:models",
				"//projects/rmm/go/backend/controller:controller",
				"//projects/rmm/go/backend/handlers:handlers",
				"//projects/rmm/go/backend/config:config",
				"//projects/rmm/go/backend/helpers:helpers",
    ],
)
