load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "config",
    srcs = ["config.go"],
    importpath = "github.com/fes111/rmm/projects/rmm/go/client/config",
    visibility = ["//visibility:public"],
    deps = [
			"@com_github_google_uuid//:uuid",
			"//projects/rmm/go/lib/models:models",
			"//projects/rmm/go/client/vars:vars",
			"//projects/rmm/go/client/system:system",
		],
)
