load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "models",
    srcs = [
        "device.go",
        "device-token.go",
        "socket-event.go",
        "systeminfo.go",
        "user.go",
				"configuration.go",
				"usage.go",
    ],
    importpath = "github.com/fes111/rmm/projects/rmm/go/lib/models",
    visibility = ["//visibility:public"],
)
